--- a/package.json
+++ b/package.json
@@ -1,12 +1,26 @@
 {
-  "name": "quanda-project",
+  "name": "forevernote-main",
   "version": "1.0.0",
-  "description": "<h1 align= \"center\" dir=\"auto\">   🖼️ Welcome to Wondr 📷 </h1> <h3 align= \"center\" dir=\"auto\">   created by: Joon Bae   <br>clone: Flickr</br> </h3>",
+  "description": "<h1 align= \"center\" dir=\"auto\">   🖋️ Welcome to ForeverNote 📓 </h1> <h3 align= \"center\" dir=\"auto\">   created by: Joon Bae   <br>clone: Evernote</br> </h3>",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "heroku-postbuild": "npm run build --prefix frontend",
+    "install": "npm --prefix backend install backend && npm --prefix frontend install frontend",
+    "dev:backend": "npm install --prefix backend start",
+    "dev:frontend": "npm install --prefix frontend start",
+    "sequelize": "npm run --prefix backend sequelize",
+    "sequelize-cli": "npm run --prefix backend sequelize-cli",
+    "start": "npm start --prefix backend"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Joon-Bae/forevernote-app.git"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Joon-Bae/forevernote-app/issues"
+  },
+  "homepage": "https://github.com/Joon-Bae/forevernote-app#readme"
 }
